Added some markup and cleaned up styles

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -4,105 +4,111 @@
 
   First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. I bring a different perspective to the teams I work with. The wide variety of experiences that I have lend themselves well to a small team.
   / This still needs help, not sure how to tie it back to the company
-   
-%h2 Skills
 
-%ol
-  %li 
-    %h3 General
-    %p Problem Solving, Learning, Teaching, Researching
+
+%section
+  %h2 Skills
+
+  %ol
+    %li 
+      %h3 General
+      %p Problem Solving, Learning, Teaching, Researching
     
-  %li
-    %h3 
-      Development 
-      %i Using the <a href="http://pragmaticstudio.com/dreyfus">Dreyfus Model</a> as a loose guide
-    %p Ruby (Proficient), Rails (Proficient), Javascript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
+    %li
+      %h3 
+        Development 
+        %i Using the <a href="http://pragmaticstudio.com/dreyfus">Dreyfus Model</a> as a loose guide
+      %p Ruby (Proficient), Rails (Proficient), Javascript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
 
-  %li
-    %h3 
-      Software
-      %i Proficient in each of the following
-    %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
-
-
-%h2 Experiences
-
-%ol
-  %li
-    %h3 
-      Fleet Ventures
-      %i Project Lead / Developer
-    %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jquery plugin that is used in each the company&rsquo;s other projects.
-    %p.date Winter 2010 &#8211; Present
-
-  %li
-    %h3
-      Squid Graphic Design
-      %i Partner / Designer / Developer / Project Manager
-    %p.desc Conceived, developed, and maintained a full-service graphic design studio. Designed and implemented dozens of websites (using both Ruby on Rails and PHP), logos, and various printed materials. Managed the accounting, clients, and projects. Worked in collaboration with business partner on design and handled all of the website development.
-    %p.date Fall 2007 &#8211; Winter 2010
-
-  %li
-    %h3
-      Manifest Web design
-      %i Designer / Developer
-    %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implementation of almost a dozen websites.
-    %p.date Summer 2009 &#8211; Winter 2010
-
-  %li
-    %h3
-      PosterGarden
-      %i Creative Specialist
-    %p.desc
-      Sole designer of large format graphic displays. Developed/designed an online version of the company&rsquo;s promotional magazine using Rails. Also created an automated archiving system using Ruby.
-    %p.date Fall 2006 &#8211; Summer 2009
-
-  %li
-    %h3
-      Shorthand Media
-      %i Developer
-    %p.desc Worked in tight collaboration with employer to create Flash applications and websites using Actionscript 2.0, backed by XML. 
-    %p.date Fall 2007 &#8211; Winter 2008
-
-  %li
-    %h3
-      World Forest Investment
-      %i Designer / Developer
-    %p.desc Primary designer and developer. Worked closely with the employer to produce a variety of printed marketing materials and multiple specialized websites. 
-    %p.date Spring 2004 &#8211; Winter 2010
+    %li
+      %h3 
+        Software
+        %i Proficient in each of the following
+      %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
 
 
-%h2 Aspirations
+%section
+  %h2 Experiences
 
-%ol
-  %li
-    %h3 Community
-    %p To write, contribute, and release more code. 
-    %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I have recently signed up to be a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
-    %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland Javascript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
+  %ol
+    %li
+      %h3 
+        Fleet Ventures
+        %i Project Lead / Developer
+      %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jquery plugin that is used in each the company&rsquo;s other projects.
+      %p.date Winter 2010 &#8211; Present
+
+    %li
+      %h3
+        Squid Graphic Design
+        %i Partner / Designer / Developer / Project Manager
+      %p.desc Conceived, developed, and maintained a full-service graphic design studio. Designed and implemented dozens of websites (using both Ruby on Rails and PHP), logos, and various printed materials. Managed the accounting, clients, and projects. Worked in collaboration with business partner on design and handled all of the website development.
+      %p.date Fall 2007 &#8211; Winter 2010
+
+    %li
+      %h3
+        Manifest Web design
+        %i Designer / Developer
+      %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implementation of almost a dozen websites.
+      %p.date Summer 2009 &#8211; Winter 2010
+
+    %li
+      %h3
+        PosterGarden
+        %i Creative Specialist
+      %p.desc
+        Sole designer of large format graphic displays. Developed/designed an online version of the company&rsquo;s promotional magazine using Rails. Also created an automated archiving system using Ruby.
+      %p.date Fall 2006 &#8211; Summer 2009
+
+    %li
+      %h3
+        Shorthand Media
+        %i Developer
+      %p.desc Worked in tight collaboration with employer to create Flash applications and websites using Actionscript 2.0, backed by XML. 
+      %p.date Fall 2007 &#8211; Winter 2008
+
+    %li
+      %h3
+        World Forest Investment
+        %i Designer / Developer
+      %p.desc Primary designer and developer. Worked closely with the employer to produce a variety of printed marketing materials and multiple specialized websites. 
+      %p.date Spring 2004 &#8211; Winter 2010
+
+
+%section
+  %h2 Aspirations
+
+  %ol
+    %li
+      %h3 Community
+      %p To write, contribute, and release more code. 
+      %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I have recently signed up to be a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
+      %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland Javascript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
     
-  %li
-    %h3 Career
-    %p One that challenges me to do my best, to learn new things, and to always look ahead. 
+    %li
+      %h3 Career
+      %p One that challenges me to do my best, to learn new things, and to always look ahead. 
     
 
-%h2 Interests
+%section
+  %h2 Interests
 
-%ol
-  %li
-    %h3 Technologies
-    %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
+  %ol
+    %li
+      %h3 Technologies
+      %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
 
-    
-%h2 Education
 
-%ol
-  %li
-    %h3 Portland State University
-    %p.desc Graphic Design
-    %p.date Fall 2003 &#8211; Spring 2007
+%section  
+  %h2 Education
 
-    
-%ol
-  %li
-    %h3 References available upon request
+  %ol
+    %li
+      %h3 Portland State University
+      %p.desc Graphic Design
+      %p.date Fall 2003 &#8211; Spring 2007
+
+%section    
+  %ol
+    %li
+      %h3 References available upon request
