--- a/views/work.haml
+++ b/views/work.haml
@@ -1,79 +1,81 @@
-%h2 Plugins &amp; Experiments
-%ol
-  %li 
-    %a{ :href => "http://editable-set.heroku.com" } 
-      %img{ :src => "/images/editable_set.png", :alt => "EditableSet jQuery Plugin" }
-    %h3 
-      EditableSet 
-      %i jQuery Plugin (Sinatra)
-    %p I wrote this for one of my current employer&rsquo;s projects. It is a jQuery edit-in-place plugin that allows the user to edit an entire form at once (versus a single field).
-    %p 
-      %a{ :href => "http://editable-set.heroku.com" } http://editable-set.heroku.com 
-      | 
-      %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
+%section
+  %h2 Plugins &amp; Experiments
+  %ol
+    %li 
+      %a{ :href => "http://editable-set.heroku.com" } 
+        %img{ :src => "/images/editable_set.png", :alt => "EditableSet jQuery Plugin" }
+      %h3 
+        EditableSet 
+        %i jQuery Plugin (Sinatra)
+      %p I wrote this for one of my current employer&rsquo;s projects. It is a jQuery edit-in-place plugin that allows the user to edit an entire form at once (versus a single field).
+      %p 
+        %a{ :href => "http://editable-set.heroku.com" } http://editable-set.heroku.com 
+        | 
+        %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
 
-  %li 
-    %a{ :href => "http://cookie-jar.heroku.com" }
-      %img{ :src => "/images/cookie_jar.png", :alt => "Cookie Jar App" }
-    %h3 
-      Cookie Jar 
-      %i Experiment (Rails)
-    %p
-      This app was inspired by an article in <a href="http://railsmagazine.com/">Rails Magazine</a> by Michelangelo Altamore. <br /> I wrote this to practice TDD and experiment with my own ideas.
-    %p 
-      %a{ :href => "http://cookie-jar.heroku.com" } http://cookie-jar.heroku.com
-      |
-      %a{ :href => "http://github.com/miwillhite/Cookie-Jar" } http://github.com/miwillhite/Cookie-Jar
+    %li 
+      %a{ :href => "http://cookie-jar.heroku.com" }
+        %img{ :src => "/images/cookie_jar.png", :alt => "Cookie Jar App" }
+      %h3 
+        Cookie Jar 
+        %i Experiment (Rails)
+      %p
+        This app was inspired by an article in <a href="http://railsmagazine.com/">Rails Magazine</a> by Michelangelo Altamore. <br /> I wrote this to practice TDD and experiment with my own ideas.
+      %p 
+        %a{ :href => "http://cookie-jar.heroku.com" } http://cookie-jar.heroku.com
+        |
+        %a{ :href => "http://github.com/miwillhite/Cookie-Jar" } http://github.com/miwillhite/Cookie-Jar
 
 
-%h2 Websites
-%ol
-  %li 
-    %a{ :href => "http://balanced-energy-solutions.heroku.com" } 
-      %img{ :src => "/images/balanced_energy_solutions.png", :alt => "Redbud Remedies Website" }
-    %h3 
-      Balanced Energy Solutions 
-      %i Business Website (Sinatra)
-    %p This site was a client project that I did as Squid Graphic Design. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
-    %p 
-      %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
+%section
+  %h2 Websites
+  %ol
+    %li 
+      %a{ :href => "http://balanced-energy-solutions.heroku.com" } 
+        %img{ :src => "/images/balanced_energy_solutions.png", :alt => "Redbud Remedies Website" }
+      %h3 
+        Balanced Energy Solutions 
+        %i Business Website (Sinatra)
+      %p This site was a client project that I did as Squid Graphic Design. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
+      %p 
+        %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
 
-  %li 
-    %a{ :href => "http://sunnydawn.com" }
-      %img{ :src => "/images/sunny_dawn.png", :alt => "Sunny Dawn Website" }
-    %h3 
-      Sunny Dawn
-      %i Business Website (Rails)
-    %p Manifest Web Design&rsquo;s first Rails app. I took this project from client consultation to deploy. It has a weekly mailer, blog, store, and content management system.
-    %p 
-      %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
+    %li 
+      %a{ :href => "http://sunnydawn.com" }
+        %img{ :src => "/images/sunny_dawn.png", :alt => "Sunny Dawn Website" }
+      %h3 
+        Sunny Dawn
+        %i Business Website (Rails)
+      %p Manifest Web Design&rsquo;s first Rails app. I took this project from client consultation to deploy. It has a weekly mailer, blog, store, and content management system.
+      %p 
+        %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
 
-  %li 
-    %a{ :href => "http://portabledisplaysuccess.com" }
-      %img{ :src => "/images/portable_display_success.png", :alt => "Portable Display Success Website" }
-    %h3 
-      Portable Display Success
-      %i Promotional Website (Rails)
-    %p My first Rails app&hellip;well, one of two. I built this and Redbud Remedies alongside each other to learn Rails. The user can manage issues, blog articles, surveys and Q&amp;A.
-    %p 
-      %a{ :href => "http://portabledisplaysuccess.com" } http://portabledisplaysuccess.com
+    %li 
+      %a{ :href => "http://portabledisplaysuccess.com" }
+        %img{ :src => "/images/portable_display_success.png", :alt => "Portable Display Success Website" }
+      %h3 
+        Portable Display Success
+        %i Promotional Website (Rails)
+      %p My first Rails app&hellip;well, one of two. I built this and Redbud Remedies alongside each other to learn Rails. The user can manage issues, blog articles, surveys and Q&amp;A.
+      %p 
+        %a{ :href => "http://portabledisplaysuccess.com" } http://portabledisplaysuccess.com
 
-  %li 
-    %a{ :href => "http://redbudremedies.com" }
-      %img{ :src => "/images/redbud_remedies.png", :alt => "Redbud Remedies Website" }
-    %h3 
-      Redbud Remedies
-      %i Business Website (Rails)
-    %p My other &ldquo;first&rdquo;. I built this with an outdated Rails book as a guide. It has a full product/order management system and is integrated with Paypal&rsquo;s Payments Pro.
-    %p 
-      %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
+    %li 
+      %a{ :href => "http://redbudremedies.com" }
+        %img{ :src => "/images/redbud_remedies.png", :alt => "Redbud Remedies Website" }
+      %h3 
+        Redbud Remedies
+        %i Business Website (Rails)
+      %p My other &ldquo;first&rdquo;. I built this with an outdated Rails book as a guide. It has a full product/order management system and is integrated with Paypal&rsquo;s Payments Pro.
+      %p 
+        %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
 
-  %li 
-    %a{ :href => "http://squidgraphicdesign.com" }
-      %img{ :src => "/images/squid_graphic_design.png", :alt => "Squid Graphic Design Website" }
-    %h3 
-      Squid Graphic Design
-      %i Business Website
-    %p My wife and I&rsquo;s former design business. More of my design work can be seen here under the <b>&ldquo;services&rdquo;</b> tab.
-    %p 
-      %a{ :href => "http://squidgraphicdesign.com" } http://squidgraphicdesign.com
+    %li 
+      %a{ :href => "http://squidgraphicdesign.com" }
+        %img{ :src => "/images/squid_graphic_design.png", :alt => "Squid Graphic Design Website" }
+      %h3 
+        Squid Graphic Design
+        %i Business Website
+      %p My wife and I&rsquo;s former design business. More of my design work can be seen here under the <b>&ldquo;services&rdquo;</b> tab.
+      %p 
+        %a{ :href => "http://squidgraphicdesign.com" } http://squidgraphicdesign.com
