--- a/views/layout.haml
+++ b/views/layout.haml
@@ -45,6 +45,6 @@
     
     %footer
       %p<
-        \# This is a Sinatra 1.0 application written in Haml/Sass, using HTML5 Markup. 
+        \# This is a Sinatra 1.0 app written in Haml/Sass, using HTML5 Markup. 
         %br<
         ="# (c) #{Time.now.year}. Matthew Willhite. All rights reserved."
