Fixed html error

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,7 +21,7 @@
       %nav
         %ul
           %li<
-            = link_to_unless_current "Resum&eacute", "/"
+            = link_to_unless_current "Resum&eacute;", "/"
           %li<
             = link_to_unless_current "Work", "/work"
           %li<
@@ -45,6 +45,6 @@
     
     %footer
       %p<
-        \# This is a Sinatra 1.0 app written in Haml/Sass, using HTML5 Markup. 
+        \# This is a Sinatra 1.0 app written in Haml/Sass, using <a href="#">HTML5 Markup<a/>. 
         %br<
         ="# (c) #{Time.now.year}. Matthew Willhite. All rights reserved."
