--- a/views/layout.haml
+++ b/views/layout.haml
@@ -45,6 +45,6 @@
     
     %footer
       %p<
-        \# This is a Sinatra 1.0 app written in Haml/Sass, using <a href="#">HTML5 Markup</a>. 
+        \# This is a Sinatra 1.0 app written in Haml/Sass, using <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmiwillhite.heroku.com%2F">HTML5 Markup</a>. 
         %br<
         ="# (c) #{Time.now.year}. Matthew Willhite. All rights reserved."
