Added fizzy finder plugin to work page

--- a/views/work.haml
+++ b/views/work.haml
@@ -14,6 +14,16 @@
         %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
 
     %li 
+      %a{ :href => "http://github.com/miwillhite/fizzy-finder" } 
+        %img{ :src => "/images/fizzy_finder.png", :alt => "FizzyFinder Plugin" }
+      %h3 
+        FizzyFinder
+        %i Javascript plugin
+      %p I wrote this for an autocomplete feature that I was working on. It works just like Textmate&rsquo;s file finder.
+      %p 
+        %a{ :href => "http://github.com/miwillhite/fizzy-finder" } http://github.com/miwillhite/fizzy-finder
+
+    %li 
       %a{ :href => "http://cookie-jar.heroku.com" }
         %img{ :src => "/images/cookie_jar.png", :alt => "Cookie Jar App" }
       %h3 
