Edited wording for fizzy finder

--- a/views/work.haml
+++ b/views/work.haml
@@ -19,7 +19,7 @@
       %h3 
         FizzyFinder
         %i Javascript plugin
-      %p I wrote this for an autocomplete feature that I was working on. It works just like Textmate&rsquo;s file finder.
+      %p It works just like Textmate&rsquo;s file finder. I needed an autocomplete that was quick and able to easily search hard-to-remember terms like &ldquo;Ketoprofen 2.5% gel.&rdquo;
       %p 
         %a{ :href => "http://github.com/miwillhite/fizzy-finder" } http://github.com/miwillhite/fizzy-finder
 
