--- a/views/case_study.haml
+++ b/views/case_study.haml
@@ -126,5 +126,5 @@
 
   
 %section 
-  %h2 Javascript Testing
-  %p We are currently using Cucumber/Rspec to test our app. However, many of our views are Javascript driven. I have invested a lot of time researching and experimenting with different testing techniques and technologies (Capybara w/Celerity, Watir-webdriver, Jasmine, QUnit, etc.), but nothing can seem to handle the level of complexity that we need in our functional Javascript tests. I have decided that Javascript needs to be tested by Javascript, the &ldquo;fakers&rdquo; just don&rsquo;t cut it. Frustrated by my findings, I have been working to develop a new system that ties Cucumber and Jasmine together. Results pending.
+  %h2 JavaScript Testing
+  %p We are currently using Cucumber/Rspec to test our app. However, many of our views are JavaScript driven. I have invested a lot of time researching and experimenting with different testing techniques and technologies (Capybara w/Celerity, Watir-webdriver, Jasmine, QUnit, etc.), but nothing can seem to handle the level of complexity that we need in our functional JavaScript tests. I have decided that JavaScript needs to be tested by JavaScript, the &ldquo;fakers&rdquo; just don&rsquo;t cut it. Frustrated by my findings, I have been working to develop a new system that ties Cucumber and Jasmine together. Results pending.
