--- a/views/styles.sass
+++ b/views/styles.sass
@@ -29,7 +29,7 @@ html
 
 body
   :color $normal
-  :padding 20px 65px
+  :padding 30px 65px
   :margin 10px 0 17px 0
   :background #FFF
   :font 
@@ -50,6 +50,9 @@ header
 nav 
   :margin-bottom $section_break + 15px
   :color $prominent
+  :font
+    :family Georgia
+    :size 1.4em
   ul
     li
       :margin-right 8px
