--- a/views/work.haml
+++ b/views/work.haml
@@ -18,7 +18,7 @@
         %img{ :src => "/images/fizzy_finder.png", :alt => "FizzyFinder Plugin" }
       %h3 
         FizzyFinder
-        %i Javascript plugin
+        %i JavaScript plugin
       %p It works just like Textmate&rsquo;s file finder. I needed an autocomplete that was quick and able to easily search hard-to-remember terms like &ldquo;Ketoprofen 2.5% gel.&rdquo;
       %p 
         %a{ :href => "http://github.com/miwillhite/fizzy-finder" } http://github.com/miwillhite/fizzy-finder
