--- a/views/resume.haml
+++ b/views/resume.haml
@@ -18,7 +18,7 @@
       %h3 
         Development 
         %i Using the <a href="http://pragmaticstudio.com/dreyfus">Dreyfus Model</a> as a loose guide
-      %p Ruby (Proficient), Rails (Proficient), Javascript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
+      %p Ruby (Proficient), Rails (Proficient), JavaScript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
 
     %li
       %h3 
@@ -36,28 +36,28 @@
         Fleet Ventures
         %i Project Lead / Developer
       %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each the company&rsquo;s other projects.
-      %p.date Winter 2010 &#8211; Present
+      %p.date Winter 2009 &#8211; Present
 
     %li
       %h3
         Squid Graphic Design
         %i Partner / Designer / Developer / Project Manager
       %p.desc Conceived, developed, and maintained a full-service graphic design studio. Designed and implemented dozens of websites (using both Ruby on Rails and PHP), logos, and various printed materials. Managed the accounting, clients, and projects. Worked in collaboration with business partner on design and handled all of the website development.
-      %p.date Fall 2007 &#8211; Winter 2010
+      %p.date Fall 2007 &#8211; Winter 2009
 
     %li
       %h3
         Manifest Web design
         %i Designer / Developer
       %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implementation of almost a dozen websites.
-      %p.date Summer 2009 &#8211; Winter 2010
+      %p.date Summer 2009 &#8211; Winter 2009
 
     %li
       %h3
         PosterGarden
         %i Creative Specialist
       %p.desc
-        Sole designer of large format graphic displays. Developed/designed an online version of the company&rsquo;s promotional magazine using Rails. Also created an automated archiving system as a Ruby learning project.
+        Sole designer of large format graphic displays. Developed/designed an online version of the company&rsquo;s promotional magazine using Rails. Also created an automated archiving system as a Ruby learning project. Worked closely with clients and project managers to create full-scale solutions from concept to print.
       %p.date Fall 2006 &#8211; Summer 2009
 
     %li
@@ -83,7 +83,7 @@
       %h3 Community
       %p To write, contribute, and release more code. 
       %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I have recently signed up to be a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
-      %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland Javascript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
+      %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland JavaScript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
     
     %li
       %h3 Career
@@ -105,7 +105,7 @@
   %ol
     %li
       %h3 Portland State University
-      %p.desc Graphic Design
+      %p.desc Graduated with Bachelors of Arts in Graphic Design. Individual studies in website development.
       %p.date Fall 2003 &#8211; Spring 2007
 
 %section    
