One more revision

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -35,7 +35,7 @@
       %h3 
         Fleet Ventures
         %i Project Lead / Developer
-      %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each the company&rsquo;s other projects.
+      %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaboration with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each the company&rsquo;s other projects.
       %p.date Winter 2009 &#8211; Present
 
     %li
