--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,7 @@
     
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" } 
     %link{ :rel => "stylesheet", :href => "/stylesheets/styles.css" }
+    %link{ :rel => "stylesheet", :href => "/stylesheets/print.css", :media => "print" }
     
     /[if IE]
       %script{ :src => "http://html5shiv.googlecode.com/svn/trunk/html5.js" }
