--- a/views/styles.sass
+++ b/views/styles.sass
@@ -24,13 +24,12 @@ $section_break: 45px
 
 @import reset.sass
 
-html
-  :background $rule
-
 body
+  :border
+    :top 10px solid $rule
+    :bottom 17px solid $rule
   :color $normal
   :padding 30px 65px
-  :margin 10px 0 17px 0
   :background #FFF
   :font 
     :family Verdana, sans-serif
