Stufff and stuff

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -16,15 +16,13 @@
     
     %li
       %h3 
-        Development 
-        %i Using the <a href="http://pragmaticstudio.com/dreyfus">Dreyfus Model</a> as a loose guide
-      %p Ruby (Proficient), Rails (Proficient), JavaScript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
+        Development
+      %p Ruby (Proficient), Rails (Proficient), JavaScript (Proficient), Clojure (Novice), CSS (Proficient)
 
     %li
       %h3 
-        Software
-        %i Proficient in each of the following
-      %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
+        Platforms &amp; Technologies
+      %p Heroku, Amazon S3, Passenger, Capistrano
 
 
 %section
@@ -33,10 +31,17 @@
   %ol
     %li
       %h3 
+        ELC Technologies
+        %i Software Engineer
+      %p.desc Web Application Developer, project lead.
+      %p.date Summer 2010 &#8211; Present
+      
+    %li
+      %h3 
         Fleet Ventures
         %i Project Lead / Developer
       %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaboration with the client on a regular basis regarding usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project&rsquo;s front-end to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each of the company&rsquo;s other projects.
-      %p.date Winter 2009 &#8211; Present
+      %p.date Winter 2009 &#8211; Summer 2010
 
     %li
       %h3
@@ -89,14 +94,14 @@
       %h3 Career
       %p One that challenges me to do my best, to learn new things, and to always look ahead. 
     
-
-%section
-  %h2 Interests
-
-  %ol
-    %li
-      %h3 Technologies
-      %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
+/ 
+/ %section
+/   %h2 Interests
+/ 
+/   %ol
+/     %li
+/       %h3 Technologies
+/       %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
 
 
 %section  
