Added case study

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -25,6 +25,8 @@
             = link_to_unless_current "Resum&eacute;", "/"
           %li<
             = link_to_unless_current "Work", "/work"
+          %li<
+            = link_to_unless_current "Case Study", "/case-study"
     
       %img{ :src => Gravatar.new("matthew.willhite@gmail.com").image_url, :alt => "Picture of Matthew Willhite" } 
       %h1 Matthew Willhite
